# Security-Anomaly-Detection-System

./: .gitignore  0887.py  DISCLAIMER.md  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: streamlit_demo.py
src/: __init__.py
src/data/: __init__.py  generator.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  anomaly_detector.py
src/utils/: __init__.py  config.py  privacy.py
src/visualization/: __init__.py  plotter.py
tests/: test_anomaly_detection.py
